# ZKMind

./: .gitignore  Cargo.toml  README.md  package-lock.json  package.json
circuits/: Nargo.toml  Prover.toml
circuits/src/: main.nr
contracts/zkmind/: Cargo.toml
contracts/zkmind/src/: lib.rs  test.rs
contracts/zkmind/test_snapshots/test/: test_full_game_codebreaker_wins.1.json  test_game_continues_after_partial_match.1.json  test_new_game_and_commit.1.json
frontend/: next.config.ts  package-lock.json  package.json
frontend/public/circuits/: mastermind.json  mastermind_vk.json
frontend/src/: main.nr
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/game/[sessionId]/: page.tsx
frontend/src/app/game/demo/: page.tsx
frontend/src/components/: CodeSetup.tsx  ColorPeg.tsx  ColorPicker.tsx  FeedbackPegs.tsx  GuessInput.tsx  GuessRow.tsx
frontend/src/lib/: contracts.ts  mastermind.ts  noir.ts  wallet.ts
scripts/: compile_and_test.sh  compile_circuit.mjs  mastermind_algorithm.ts  test_hash.sh  test_poseidon.nr
